--- a/qqq_plot_metrics.ipynb
+++ b/qqq_plot_metrics.ipynb
@@ -27,7 +27,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# set csv path\n",
+    "# set csv path - metrics csc saved from qqq_backtest notebook\n",
     "metrics_csv_path = Path('metrics.csv')"
    ]
   },
